[package]
name = "detect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = { version = "4.4", default-features = false, features = ["reqwest"] }
anyhow = "1.0"
warp = "0.3"
webbrowser = "0.7"
bytes = "1.0"
base64 = "0.13.0"

